feat: add bin tools